first html page!

--- a/home.html
+++ b/home.html
@@ -1,3 +1,10 @@
-<h1>Hello world</h1>
-<a href="http://www.google.com" target="_blank">go to google</a>
-<img />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Home - my first website.</title>
+  </head>
+  <body>
+    <h1>Hello clone Kakao !!</h1>
+  </body>
+</html>
