--- a/home.html
+++ b/home.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
+  <head lang="kr">
+    <link
+      rel="shortcut icon"
+      sizes="16x16 32x32 64x64"
+      href="https://nomadcoders.co/m.png"
+    />
     <title>Home - my first website.</title>
+    <meta name="description" content="this is my first Website" />
+    <meta charset="UTF-8" />
   </head>
   <body>
     <h1>Hello clone Kakao !!</h1>
