html from tag attribute

--- a/home.html
+++ b/home.html
@@ -11,6 +11,13 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <h1>Hello clone Kakao !!</h1>
+    <form>
+      <input type="file" accept="/image/*" />
+      <input required placeholder="Name" type="text" />
+      <input required placeholder="Last Name" type="text" />
+      <input required placeholder="User Name" type="text" />
+      <input required placeholder="password" minlength="10" type="password" />
+      <input type="submit" value="Create Value" />
+    </form>
   </body>
 </html>
