--- a/home.html
+++ b/home.html
@@ -12,12 +12,9 @@
   </head>
   <body>
     <form>
-      <input type="file" accept="/image/*" />
-      <input required placeholder="Name" type="text" />
-      <input required placeholder="Last Name" type="text" />
-      <input required placeholder="User Name" type="text" />
-      <input required placeholder="password" minlength="10" type="password" />
-      <input type="submit" value="Create Value" />
+      <label for="website">Website</label>
+      <input id="website" required placeholder="Name" type="url" />
+      <input type="submit" value="Create Account" />
     </form>
   </body>
 </html>
