html sematic tag

--- a/home.html
+++ b/home.html
@@ -11,10 +11,12 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <form>
-      <label for="website">Website</label>
-      <input id="website" required placeholder="Name" type="url" />
-      <input type="submit" value="Create Account" />
-    </form>
+    <header>
+      <h1>Jong Ho times</h1>
+    </header>
+    <main>
+      <address>솔빛마을</address>
+    </main>
+    <footer>&copy; 2020 Jong Ho</footer>
   </body>
 </html>
