--- a/home.html
+++ b/home.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head lang="kr">
-    <link
-      rel="shortcut icon"
-      sizes="16x16 32x32 64x64"
-      href="https://nomadcoders.co/m.png"
-    />
-    <title>Home - my first website.</title>
-    <meta name="description" content="this is my first Website" />
-    <meta charset="UTF-8" />
+<html lang="kr">
+  <head>
+    <title>Home - My first Website.</title>
   </head>
   <body>
     <header>
-      <h1>Jong Ho times</h1>
+      <h1>JongHo Website</h1>
     </header>
     <main>
       <address>솔빛마을</address>
     </main>
-    <footer>&copy; 2020 Jong Ho</footer>
+    <footer>&copy;2020 JongHo</footer>
   </body>
 </html>
