--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <html lang="kr">
   <head>
     <title>Home - My first Website.</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <header>
