--- a/home.html
+++ b/home.html
@@ -2,6 +2,17 @@
   <head>
     <title>Home - My first Website.</title>
     <link href="style.css" rel="stylesheet" />
+    <style>
+      h1 {
+        color: blue;
+        font-style: italic;
+        font-size: 1rem;
+      }
+      address {
+        text-align: center;
+        color: cadetblue;
+      }
+    </style>
   </head>
   <body>
     <header>
