--- a/home.html
+++ b/home.html
@@ -2,20 +2,22 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
-      h1 {
-        color: blue;
-        font-style: italic;
-        font-size: 1rem;
+      div {
+        height: 150px;
+        width: 150px;
+        background-color: tomato;
+      }
+      span {
+        background-color: wheat;
       }
     </style>
   </head>
   <body>
-    <header>
-      <h1>JongHo Website</h1>
-    </header>
-    <main>
-      <address>솔빛마을</address>
-    </main>
-    <footer>&copy;2020 JongHo</footer>
+    <div></div>
+    <div></div>
+    <div></div>
+    <span>Hello</span>
+    <span>Hello</span>
+    <span>Hello</span>
   </body>
 </html>
