--- a/home.html
+++ b/home.html
@@ -2,22 +2,22 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
-      div {
-        height: 150px;
-        width: 150px;
+      html {
         background-color: tomato;
       }
-      span {
-        background-color: wheat;
+      body {
+        margin: 20px 15px;
+        background-color: thistle;
+      }
+      div {
+        margin-left: 50px;
+        height: 150px;
+        width: 150px;
+        background-color: white;
       }
     </style>
   </head>
-  <body>
+  <body style="height: 150px">
     <div></div>
-    <div></div>
-    <div></div>
-    <span>Hello</span>
-    <span>Hello</span>
-    <span>Hello</span>
   </body>
 </html>
