--- a/home.html
+++ b/home.html
@@ -6,18 +6,42 @@
         background-color: tomato;
       }
       body {
-        margin: 20px 15px;
+        margin: 20px;
+        padding: 20px 10px;
         background-color: thistle;
       }
       div {
-        margin-left: 50px;
+        padding: 10px;
+      }
+      #first {
+        background-color: whitesmoke;
         height: 150px;
         width: 150px;
-        background-color: white;
+      }
+      #second {
+        background-color: teal;
+        height: 130px;
+        width: 130px;
+      }
+      #third {
+        background-color: orange;
+        height: 100px;
+        width: 100px;
+      }
+      #fourth {
+        background-color: orchid;
+        height: 80px;
+        width: 80px;
       }
     </style>
   </head>
   <body style="height: 150px">
-    <div></div>
+    <div id="first">
+      <div id="second">
+        <div id="third">
+          <div id="fourth"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
