--- a/home.html
+++ b/home.html
@@ -2,55 +2,31 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
-      * {
-        border: 2px dashed black;
-      }
-      html {
-        background-color: tomato;
-      }
       body {
         margin: 20px;
-        padding: 20px 10px;
-        background-color: thistle;
-      }
-      div {
-        padding: 10px;
-        border: solid 2px black;
-      }
-      #first {
-        background-color: whitesmoke;
-        height: 100px;
-        width: 100px;
-      }
-      #second {
-        background-color: teal;
-        height: 90px;
-        width: 90px;
-      }
-      #third {
-        background-color: orange;
-        height: 80px;
-        width: 80px;
-      }
-      #fourth {
-        background-color: orchid;
-        height: 70px;
-        width: 70px;
       }
       span {
-        border: 1px dotted black;
+        background-color: teal;
+      }
+      .btn {
+        padding: 5px 10px;
+        border-radius: 5px;
+      }
+      .teal {
+        background-color: teal;
+      }
+      .tomato {
+        background-color: tomato;
+        color: white;
       }
     </style>
   </head>
-  <body style="height: 150px">
-    <div id="first">
-      <div id="second">
-        <div id="third">
-          <div id="fourth">
-            <span>hello</span>
-          </div>
-        </div>
-      </div>
-    </div>
+  <body>
+    <span class="btn teal">hello</span>
+    <span class="btn tomato">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn tomato">hello</span>
+    <span class="btn teal">hello</span>
+    <span class="btn tomato">hello</span>
   </body>
 </html>
