--- a/home.html
+++ b/home.html
@@ -5,28 +5,19 @@
       body {
         margin: 20px;
       }
-      span {
+      div {
+        display: inline-block;
+        width: 300px;
+        height: 300px;
         background-color: teal;
-      }
-      .btn {
-        padding: 5px 10px;
-        border-radius: 5px;
-      }
-      .teal {
-        background-color: teal;
-      }
-      .tomato {
-        background-color: tomato;
-        color: white;
+        margin-right: 10px;
       }
     </style>
   </head>
   <body>
-    <span class="btn teal">hello</span>
-    <span class="btn tomato">hello</span>
-    <span class="btn teal">hello</span>
-    <span class="btn tomato">hello</span>
-    <span class="btn teal">hello</span>
-    <span class="btn tomato">hello</span>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
   </body>
 </html>
