--- a/home.html
+++ b/home.html
@@ -3,21 +3,25 @@
     <title>Home - My first Website.</title>
     <style>
       body {
+        height: 100vh;
         margin: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
       div {
-        display: inline-block;
         width: 300px;
         height: 300px;
         background-color: teal;
-        margin-right: 10px;
+      }
+      #second {
+        background-color: tan;
       }
     </style>
   </head>
   <body>
     <div></div>
-    <div></div>
-    <div></div>
+    <div id="second"></div>
     <div></div>
   </body>
 </html>
