--- a/home.html
+++ b/home.html
@@ -8,10 +8,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
       }
       div {
-        width: 300px;
-        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 200px;
+        font-size: 20px;
+        color: white;
         background-color: teal;
       }
       #second {
@@ -20,8 +26,8 @@
     </style>
   </head>
   <body>
-    <div></div>
-    <div id="second"></div>
-    <div></div>
+    <div>1</div>
+    <div id="second">2</div>
+    <div>3</div>
   </body>
 </html>
