--- a/home.html
+++ b/home.html
@@ -3,31 +3,24 @@
     <title>Home - My first Website.</title>
     <style>
       body {
-        height: 100vh;
+        height: 1000vh;
         margin: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
       }
       div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 200px;
-        height: 200px;
-        font-size: 20px;
+        width: 300px;
+        height: 300px;
         color: white;
         background-color: teal;
       }
-      #second {
-        background-color: tan;
+      #different {
+        position: fixed;
+        background-color: wheat;
+        width: 350px;
       }
     </style>
   </head>
   <body>
-    <div>1</div>
-    <div id="second">2</div>
-    <div>3</div>
+    <div></div>
+    <div id="different"></div>
   </body>
 </html>
