--- a/home.html
+++ b/home.html
@@ -6,24 +6,22 @@
         height: 1000vh;
         margin: 50px;
       }
-      div {
-        width: 300px;
-        height: 300px;
-        background-color: wheat;
-        position: relative;
+      span {
+        background-color: tomato;
       }
-      .green {
+      span:nth-child(odd) {
         background-color: teal;
-        width: 100px;
-        height: 100px;
-        position: absolute;
-        bottom: 0px;
       }
     </style>
   </head>
   <body>
-    <div>
-      <div class="green"></div>
-    </div>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
+    <span>hello</span>
   </body>
 </html>
