--- a/home.html
+++ b/home.html
@@ -6,27 +6,22 @@
         height: 1000vh;
         margin: 50px;
       }
-      span {
-        background-color: yellowgreen;
-        padding: 5px;
-        border-radius: 10px;
+      input {
+        border: 1px solid wheat;
       }
-
-      div > span {
-        text-decoration: underline;
+      input:required {
+        border-color: tomato;
       }
-      p + span {
-        color: white;
+      input[placeholder~="name"] {
+        background-color: pink;
       }
     </style>
   </head>
   <body>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis
-        excepturi nostrum <span>tempora</span>
-      </p>
-      <span>hello</span>
-    </div>
+    <form>
+      <input type="text" placeholder="First name" />
+      <input type="text" placeholder="Last name" />
+      <input type="password" required placeholder="password" />
+    </form>
   </body>
 </html>
