--- a/home.html
+++ b/home.html
@@ -6,22 +6,19 @@
         height: 1000vh;
         margin: 50px;
       }
-      form {
-        border: 1px solid salmon;
-        display: flex;
-        flex-direction: column;
-        padding: 20px;
-      }
-      form:hover input:focus {
-        background-color: tomato;
+      p::first-letter {
+        color: white;
+        font-size: 20px;
+        background-color: yellowgreen;
       }
     </style>
   </head>
   <body>
-    <form>
-      <input type="text" />
-      <input type="text" />
-      <input type="text" />
-    </form>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+      inventore facere ipsa, dolorem deserunt nulla doloremque perferendis,
+      voluptatum ducimus nisi accusantium. Debitis nobis id temporibus, et esse
+      ullam consequuntur. Ipsum.
+    </p>
   </body>
 </html>
