--- a/home.html
+++ b/home.html
@@ -2,14 +2,20 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
+      :root {
+        --main-color: #489ee3;
+        --default-border: solid 1px var(--main-color);
+      }
       body {
         height: 1000vh;
         margin: 50px;
       }
-      p::first-letter {
-        color: white;
-        font-size: 20px;
-        background-color: yellowgreen;
+      p {
+        color: var(--main-color);
+      }
+      a {
+        color: var(--main-color);
+        border: var(--default-border);
       }
     </style>
   </head>
@@ -20,5 +26,8 @@
       voluptatum ducimus nisi accusantium. Debitis nobis id temporibus, et esse
       ullam consequuntur. Ipsum.
     </p>
+    <div>
+      <a href="https://www.naver.com">go to naver</a>
+    </div>
   </body>
 </html>
