--- a/home.html
+++ b/home.html
@@ -1,33 +1,25 @@
+<!DOCTYPE html>
 <html lang="kr">
   <head>
     <title>Home - My first Website.</title>
     <style>
-      :root {
-        --main-color: #489ee3;
-        --default-border: solid 1px var(--main-color);
-      }
-      body {
-        height: 1000vh;
-        margin: 50px;
-      }
-      p {
-        color: var(--main-color);
-      }
       a {
-        color: var(--main-color);
-        border: var(--default-border);
+        color: white;
+        background-color: tomato;
+        text-decoration: none;
+        padding: 3px 5px;
+        border-radius: 5px;
+        font-size: 55px;
+        transition: all 1s ease-in-out;
+      }
+      a:hover {
+        border-radius: 20px;
+        color: tomato;
+        background-color: wheat;
       }
     </style>
   </head>
   <body>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
-      inventore facere ipsa, dolorem deserunt nulla doloremque perferendis,
-      voluptatum ducimus nisi accusantium. Debitis nobis id temporibus, et esse
-      ullam consequuntur. Ipsum.
-    </p>
-    <div>
-      <a href="https://www.naver.com">go to naver</a>
-    </div>
+    <a href="#">go home</a>
   </body>
 </html>
