css transiton part two

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         padding: 3px 5px;
         border-radius: 5px;
         font-size: 55px;
-        transition: all 1s ease-in-out;
+        transition: all 1s cubic-bezier(0.06, 0, 0.743, 0.045);
       }
       a:hover {
         border-radius: 20px;
@@ -20,6 +20,6 @@
     </style>
   </head>
   <body>
-    <a href="#">go home</a>
+    <a href="#">Go home</a>
   </body>
 </html>
