--- a/home.html
+++ b/home.html
@@ -3,23 +3,17 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
-      a {
-        color: white;
-        background-color: tomato;
-        text-decoration: none;
-        padding: 3px 5px;
-        border-radius: 5px;
-        font-size: 55px;
-        transition: all 1s cubic-bezier(0.06, 0, 0.743, 0.045);
+      img {
+        border: 5px solid black;
+        border-radius: 50%;
+        transition: transform 2s ease-in-out;
       }
-      a:hover {
-        border-radius: 20px;
-        color: tomato;
-        background-color: wheat;
+      img:hover {
+        transform: rotateY(360deg) scale(0.5);
       }
     </style>
   </head>
   <body>
-    <a href="#">Go home</a>
+    <img src="img/logo.png" />
   </body>
 </html>
