--- a/home.html
+++ b/home.html
@@ -3,13 +3,18 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
+      @keyframes animationEffect {
+        from {
+          transform: rotateY(0);
+        }
+        to {
+          transform: rotateY(180deg) translateX(100px);
+        }
+      }
       img {
         border: 5px solid black;
         border-radius: 50%;
-        transition: transform 2s ease-in-out;
-      }
-      img:hover {
-        transform: rotateY(360deg) scale(0.5);
+        animation: animationEffect 5s ease-in-out infinite;
       }
     </style>
   </head>
