--- a/home.html
+++ b/home.html
@@ -3,17 +3,37 @@
   <head>
     <title>Home - My first Website.</title>
     <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
       @keyframes animationEffect {
-        from {
+        0% {
           transform: rotateY(0);
         }
-        to {
-          transform: rotateY(180deg) translateX(100px);
+        25% {
+          transform: scale(2);
+        }
+        50% {
+          border-radius: 0px;
+          transform: rotateY(180deg) translateY(100px);
+          border-color: tomato;
+          opacity: 0;
+        }
+        75% {
+          transform: scale(5);
+        }
+        100% {
+          transform: rotateY(0);
         }
       }
       img {
         border: 5px solid black;
         border-radius: 50%;
+        width: 100px;
+        height: 100px;
         animation: animationEffect 5s ease-in-out infinite;
       }
     </style>
