--- a/home.html
+++ b/home.html
@@ -8,37 +8,30 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        flex-direction: column;
       }
-      @keyframes animationEffect {
-        0% {
-          transform: rotateY(0);
-        }
-        25% {
-          transform: scale(2);
-        }
-        50% {
-          border-radius: 0px;
-          transform: rotateY(180deg) translateY(100px);
-          border-color: tomato;
-          opacity: 0;
-        }
-        75% {
-          transform: scale(5);
-        }
-        100% {
-          transform: rotateY(0);
+      div {
+        width: 200px;
+        height: 200px;
+        background-color: teal;
+      }
+      @media screen and (min-width: 601px) and (max-width: 1200px) and (orientation: landscape) {
+        div {
+          background-color: wheat;
         }
       }
-      img {
-        border: 5px solid black;
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        animation: animationEffect 5s ease-in-out infinite;
+      span {
+        font-size: 50px;
+      }
+      @media screen and (orientation: landscape) {
+        span {
+          display: none;
+        }
       }
     </style>
   </head>
   <body>
-    <img src="img/logo.png" />
+    <div></div>
+    <span>Please flip your phone :)</span>
   </body>
 </html>
