sign up page html 100%

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+    <header class="wellcome-header">
+      <h1 class="wellcome-header__title">Wellcome to Kakao Clone</h1>
+      <p class="wellcome-header__text">
+        if you have a Kakao Account, log in with your email or phone number.
+      </p>
+    </header>
+    <form id="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" placeholder="Log In" />
+      <a href="#">Find Kakao Account or Password</a>
+    </form>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
