--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <form id="login-form">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="Password" />
-      <input type="submit" placeholder="Log In" />
+      <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
 
