--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
         <i class="fas fa-bolt"></i>
       </div>
     </div>
+
     <header class="wellcome-header">
       <h1 class="wellcome-header__title">Wellcome to Kakao Clone</h1>
       <p class="wellcome-header__text">
         if you have a Kakao Account, log in with your email or phone number.
       </p>
     </header>
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+
+    <form action="friends.html" method="GET" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
