--- a/friends.html
+++ b/friends.html
@@ -31,7 +31,8 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="#"
-            ><i class="far fa-comment fa-2x"></i>
+            ><span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
