--- a/chats.html
+++ b/chats.html
@@ -46,6 +46,10 @@
             </h6>
           </div>
         </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge example">1</div>
+        </div>
       </div>
     </main>
 
@@ -57,16 +61,18 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
-            ><span class="nav__notification">1</span>
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
             <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
+          <a class="nav__link" href="more.html"
             ><i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
