--- a/chats.html
+++ b/chats.html
@@ -33,24 +33,26 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="img/self-01.jpg"
-            class="user-component__avator user-component__avator"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Youngdo</h4>
-            <h6 class="user-component__subtitle">
-              Please cheek My Kakao Account Info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/self-01.jpg"
+              class="user-component__avator user-component__avator"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Youngdo</h4>
+              <h6 class="user-component__subtitle">
+                Please cheek My Kakao Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge example">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge example">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
