kakao page chat page

--- a/chat.html
+++ b/chat.html
@@ -25,12 +25,12 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="chats.html">
           <i class="fas fa-angle-left fa-2x"></i>
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Youngdo</h1>
+        <h1 class="alt-header__title">Blanc</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -38,7 +38,20 @@
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+
+      <div class="message-row">
+        <img src="img/self-02.jpg" />
+        <div class="message-row__content">
+          <span class="message__author">Blanc</span>
+          <div class="message__info">
+            <span class="message__bubble">야옹</span>
+            <span class="message__time">21:17</span>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
