--- a/chats.html
+++ b/chats.html
@@ -37,11 +37,11 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/self-01.jpg"
+              src="img/self-02.jpg"
               class="user-component__avator user-component__avator"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Youngdo</h4>
+              <h4 class="user-component__title">Blanc</h4>
               <h6 class="user-component__subtitle">
                 Please cheek My Kakao Account Info
               </h6>
