--- a/chat.html
+++ b/chat.html
@@ -51,6 +51,14 @@
           </div>
         </div>
       </div>
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">코젤이 어디있누?</span>
+            <span class="message__time">21:20</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
