kakao page chat input

--- a/chat.html
+++ b/chat.html
@@ -51,6 +51,7 @@
           </div>
         </div>
       </div>
+
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
@@ -60,6 +61,19 @@
         </div>
       </div>
     </main>
+
+    <form class="reply">
+      <div class="reply__column">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write message..." />
+        <i class="far fa-smile-wink"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
