kakao clone chat page maessage

--- a/chat.html
+++ b/chat.html
@@ -60,6 +60,15 @@
           </div>
         </div>
       </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">오늘 뭐하누?</span>
+            <span class="message__time">21:23</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <form class="reply">
