--- a/friends.html
+++ b/friends.html
@@ -99,7 +99,7 @@
       </ul>
     </nav>
 
-    <div>
+    <div id="splash-screen">
       <div class="splash-screen">
         <i class="fas fa-comment"></i>
       </div>
