kakao clone find animation

--- a/find.html
+++ b/find.html
@@ -62,8 +62,8 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#Blanc</h5>
+            <h6 class="open-post__hashtags">#Blanc#Cozel#Cute</h6>
             <div class="open-post__members">
               <img src="img/self-02.jpg" />
               <span class="open-post__member-count">802 members</span>
